--- a/src/data/home_page/HomePage.mdx
+++ b/src/data/home_page/HomePage.mdx
@@ -1,4 +1,23 @@
 ---
 title: "25.08.2023"
-image: "hero_image.jpg"
+image: "img/hero_image.jpg"
+
+ext_link_1_image: "img/ext_link-1-image-cake.jpg"
+ext_link_1_text: "Kulinarischer Beitrag"
+ext_link_1_link: "https://www.reingersbackwelt.com/"
+
+ext_link_2_image: "img/ext_link-2-image-games.jpg"
+ext_link_2_text: "Künstlerischer Beitrag & Spiele"
+ext_link_2_link: "https://www.reingersbackwelt.com/"
+
+ext_link_3_image: "img/ext_link-3-image-download.jpg"
+ext_link_3_text: "Bilder Download"
+ext_link_3_link: "https://www.reingersbackwelt.com/"
+
+ext_link_4_image: "img/ext_link-4-image-upload.jpg"
+ext_link_4_text: "Bilder Upload"
+ext_link_4_link: "https://www.reingersbackwelt.com/"
 ---
+
+
+[comment]: <> (TODO: Fill in correct links)
