Make menu pages accessible through collection route. Fill in some dummy data. Add correct urls for "kulinarischer Beitrag" & "Bilder Upload"

--- a/src/data/home_page/HomePage.mdx
+++ b/src/data/home_page/HomePage.mdx
@@ -4,7 +4,7 @@ image: "img/hero_image.jpg"
 
 ext_link_1_image: "img/ext_link-1-image-cake.jpg"
 ext_link_1_text: "Kulinarischer Beitrag"
-ext_link_1_link: "https://www.reingersbackwelt.com/"
+ext_link_1_link: "https://werbringtwas.com/poll/a0a2611"
 
 ext_link_2_image: "img/ext_link-2-image-games.jpg"
 ext_link_2_text: "Künstlerischer Beitrag & Spiele"
@@ -16,7 +16,7 @@ ext_link_3_link: "https://www.reingersbackwelt.com/"
 
 ext_link_4_image: "img/ext_link-4-image-upload.jpg"
 ext_link_4_text: "Bilder Upload"
-ext_link_4_link: "https://www.reingersbackwelt.com/"
+ext_link_4_link: "https://onedrive.live.com/?authkey=%21APXhqHscpOxDx1M&id=887BEAD0B8F1708%21124666&cid=0887BEAD0B8F1708"
 ---
 
 
