--- a/src/data/menu/menu.mdx
+++ b/src/data/menu/menu.mdx
@@ -1,7 +1,7 @@
 ---
 menu: {"items": [
-                    {"name": "Programm", "url": "google.com"},
-                    {"name": "Location", "url": "test.de"},
-                    {"name": "FAQs",     "url": "test.ch"}
+                    {"name": "Programm", "slug": "program"},
+                    {"name": "Location", "slug": "location"},
+                    {"name": "FAQs",     "slug": "faq"}
 ]}
 ---
