Create Timeline for program page. Show image and title for all menu pages.

--- a/src/data/pages/faq.mdx
+++ b/src/data/pages/faq.mdx
@@ -5,5 +5,7 @@ title: "FAQ's"
 slug: "/faq"
 image: "img/wedding_hero_img.jpg"
 status: ""
-content: ""
+content: {"faqs" : [
+    {"question" : "?", "answer" : "!"}
+]}
 ---
