--- a/src/data/pages/location.mdx
+++ b/src/data/pages/location.mdx
@@ -3,7 +3,7 @@ individual-type: "page"
 id: 2
 title: "Location"
 slug: "/location"
-image: "img/wedding_hero_img.jpg"
+image: "img/location_hero_img.jpg"
 status: ""
-content: ""
+content: {"locations": "Hallo"}
 ---
