--- a/src/data/pages/program.mdx
+++ b/src/data/pages/program.mdx
@@ -5,5 +5,13 @@ title: "Programm"
 slug: "/program"
 image: "img/wedding_hero_img.jpg"
 status: ""
-content: ""
+content: {"timelineItems" : [
+    {"step": 1, "icon": "Icon", "text": "10:00 Uhr Sektempfang vor dem Rathaus"},
+    {"step": 2, "icon": "Icon", "text": "11:00 Uhr Trauung (mit Eltern & Trauzeugen)"},
+    {"step": 3, "icon": "Icon", "text": "Seifenblasen und Häppchen"},
+    {"step": 4, "icon": "Icon", "text": "Freizeit / Pause"},
+    {"step": 5, "icon": "Icon", "text": "16:00 Uhr Treffen an der Opfinger Hütte"},
+    {"step": 6, "icon": "Icon", "text": "17:00 Uhr Grillieren & Essen"},
+    {"step": 7, "icon": "Icon", "text": "Feiern bis in die Nacht"},
+]}
 ---
