Create FAQ page, add new pics and icons, improve style

--- a/src/data/img_attribution/img_attribution.mdx
+++ b/src/data/img_attribution/img_attribution.mdx
@@ -1,8 +1,12 @@
 ---
-usedPics: {"pics": [
-                    {"name": "FreePic", "url": "https://de.freepik.com/fotos-kostenlos/die-besten-maenner-werfen-draussen-im-park-ein-laecheln-auf-den-lippen_7497998.htm#query=wedding%20games&position=2&from_view=search&track=ais"},
-                    {"name": "Pixaby", "url": "https://pixabay.com/de/photos/kuchen-torte-beeren-creme-4910417/"},
-                    {"name": "FreePic", "url": "https://de.freepik.com/fotos-kostenlos/schoene-menschen-die-eine-hochzeit-am-strand-feiern_16515516.htm#query=wedding%20games&position=31&from_view=search&track=ais"},
-                    {"name": "FreePic", "url": "https://de.freepik.com/fotos-kostenlos/teil-des-braeutigams-mit-retro-kamera-und-leerer-karte_10687402.htm#query=photograph%20wedding&position=1&from_view=search&track=ais"}
+usedPics: {"externalPics": [
+                    {"name": "FreePic",   "usedOn": "External Links Area",   "url": "https://de.freepik.com/fotos-kostenlos/die-besten-maenner-werfen-draussen-im-park-ein-laecheln-auf-den-lippen_7497998.htm#query=wedding%20games&position=2&from_view=search&track=ais"},
+                    {"name": "Pixabay",   "usedOn": "External Links Area",   "url": "https://pixabay.com/de/photos/kuchen-torte-beeren-creme-4910417/"},
+                    {"name": "FreePic",   "usedOn": "External Links Area",   "url": "https://de.freepik.com/fotos-kostenlos/schoene-menschen-die-eine-hochzeit-am-strand-feiern_16515516.htm#query=wedding%20games&position=31&from_view=search&track=ais"},
+                    {"name": "FreePic",   "usedOn": "External Links Area",   "url": "https://de.freepik.com/fotos-kostenlos/teil-des-braeutigams-mit-retro-kamera-und-leerer-karte_10687402.htm#query=photograph%20wedding&position=1&from_view=search&track=ais"},
+                    {"name": "Pixabay",   "usedOn": "Location Site",         "url": "https://pixabay.com/de/photos/blumenstrau%C3%9F-hochzeitsstrau%C3%9F-tisch-1566272/"},
+                    {"name": "Pixabay",   "usedOn": "FAQ Site"     ,         "url": "https://pixabay.com/de/photos/br%c3%a4utigam-hochzeit-wedding-heiraten-1578188/"},
+                    {"name": "FreePic",   "usedOn": "Programm Site",         "url": "https://de.freepik.com/fotos-kostenlos/braeutigam-putting-ring-am-finger-der-braut_937752.htm#query=wedding%20pictures&position=29&from_view=search&track=ais"},
+                    {"name": ""       ,   "usedOn": "Contact Site" ,         "url": ""},
 ]}
 ---
