--- a/src/data/pages/contact.mdx
+++ b/src/data/pages/contact.mdx
@@ -3,14 +3,14 @@ individual-type: "footer-page"
 id: 4
 title: "Kontakte"
 slug: "/contacts"
-image: "img/wedding_hero_img.jpg"
+image: "img/contact_hero_img.jpg"
 status: ""
 content: {"contacts" : [
-    {"role" : "Hochzeitspaar", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/wedding_hero_img.jpg"},
-    {"role" : "Hochzeitspaar", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/wedding_hero_img.jpg"},
-    {"role" : "Trauzeugen Braut", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/wedding_hero_img.jpg"},
-    {"role" : "Trauzeugen Braut", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/wedding_hero_img.jpg"},
-    {"role" : "Trauzeugen Bräutigam", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/wedding_hero_img.jpg"},
-    {"role" : "Trauzeugen Bräutigam", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/wedding_hero_img.jpg"},
+    {"role" : "Hochzeitspaar", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
+    {"role" : "Hochzeitspaar", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
+    {"role" : "Trauzeugen Braut", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
+    {"role" : "Trauzeugen Braut", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
+    {"role" : "Trauzeugen Bräutigam", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
+    {"role" : "Trauzeugen Bräutigam", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
 ]}
 ---
