--- a/src/data/pages/faq.mdx
+++ b/src/data/pages/faq.mdx
@@ -3,9 +3,11 @@ individual-type: "menu-page"
 id: 1
 title: "FAQ's"
 slug: "/faq"
-image: "img/wedding_hero_img.jpg"
+image: "img/faq_hero_img.jpg"
 status: ""
 content: {"faqs" : [
-    {"question" : "?", "answer" : "!"}
+    {"question" : "?", "answer" : "!"},
+    {"question" : "??", "answer" : "!!"},
+    {"question" : "???", "answer" : "!!!"}
 ]}
 ---
