--- a/src/data/pages/program.mdx
+++ b/src/data/pages/program.mdx
@@ -3,7 +3,7 @@ individual-type: "menu-page"
 id: 3
 title: "Programm"
 slug: "/program"
-image: "img/wedding_hero_img.jpg"
+image: "img/program_hero_img.jpg"
 status: ""
 content: {"timelineItems" : [
     {"step": 1, "icon": "Icon", "text": "10:00 Uhr Sektempfang vor dem Rathaus"},
