Restructure pages to work with gatsby build.

--- a/src/data/home_page/HomePage.mdx
+++ b/src/data/home_page/HomePage.mdx
@@ -1,6 +1,7 @@
 ---
 title: "25.08.2023"
 image: "img/hero_image.jpg"
+slug: "/"
 
 ext_link_1_image: "img/ext_link-1-image-cake.jpg"
 ext_link_1_text: "Kulinarischer Beitrag"
