--- a/src/data/img_attribution/img_attribution.mdx
+++ b/src/data/img_attribution/img_attribution.mdx
@@ -1,4 +1,5 @@
 ---
+slug: ""
 usedPics: {"externalPics": [
                     {"name": "FreePic",   "usedOn": "External Links Area",   "url": "https://de.freepik.com/fotos-kostenlos/die-besten-maenner-werfen-draussen-im-park-ein-laecheln-auf-den-lippen_7497998.htm#query=wedding%20games&position=2&from_view=search&track=ais"},
                     {"name": "Pixabay",   "usedOn": "External Links Area",   "url": "https://pixabay.com/de/photos/kuchen-torte-beeren-creme-4910417/"},
