--- a/src/data/pages/contact.mdx
+++ b/src/data/pages/contact.mdx
@@ -2,7 +2,7 @@
 individual-type: "footer-page"
 id: 4
 title: "Kontakte"
-slug: "/contacts"
+slug: "/contact"
 image: "img/contact_hero_img.jpg"
 status: ""
 content: {"contacts" : [
