expand index page with style newspaper article, improve overall styling

--- a/src/data/home_page/HomePage.mdx
+++ b/src/data/home_page/HomePage.mdx
@@ -3,6 +3,8 @@ title: "25.08.2023"
 image: "img/hero_image.jpg"
 slug: "/"
 
+newspaper_image: "img/newspaper.jpeg"
+
 ext_link_1_image: "img/ext_link-1-image-cake.jpg"
 ext_link_1_text: "Kulinarischer Beitrag"
 ext_link_1_link: "https://werbringtwas.com/poll/a0a2611"
