Extend timeline on program page with icons

--- a/src/data/pages/program.mdx
+++ b/src/data/pages/program.mdx
@@ -6,12 +6,12 @@ slug: "/program"
 image: "img/program_hero_img.jpg"
 status: ""
 content: {"timelineItems" : [
-    {"step": 1, "icon": "Icon", "text": "10:00 Uhr Sektempfang vor dem Rathaus"},
-    {"step": 2, "icon": "Icon", "text": "11:00 Uhr Trauung (mit Eltern & Trauzeugen)"},
-    {"step": 3, "icon": "Icon", "text": "Seifenblasen und Häppchen"},
-    {"step": 4, "icon": "Icon", "text": "Freizeit / Pause"},
-    {"step": 5, "icon": "Icon", "text": "16:00 Uhr Treffen an der Opfinger Hütte"},
-    {"step": 6, "icon": "Icon", "text": "17:00 Uhr Grillieren & Essen"},
-    {"step": 7, "icon": "Icon", "text": "Feiern bis in die Nacht"},
+    {"step": 1, "icon": "img/program_icon_sparkling_wine.jpg",  "text": "10:00 Uhr Sektempfang vor dem Rathaus"},
+    {"step": 2, "icon": "img/program_icon_rings.jpg",           "text": "11:00 Uhr Trauung (mit Eltern & Trauzeugen)"},
+    {"step": 3, "icon": "img/program_icon_bubblesAndBites.jpg", "text": "Seifenblasen und Häppchen"},
+    {"step": 4, "icon": "img/program_icon_empty.jpg",           "text": "Freizeit / Pause"},
+    {"step": 5, "icon": "img/program_icon_empty.jpg",           "text": "16:00 Uhr Treffen an der Opfinger Hütte"},
+    {"step": 6, "icon": "img/program_icon_fire.jpg",            "text": "17:00 Uhr Grillieren & Essen"},
+    {"step": 7, "icon": "img/program_icon_night.jpg",           "text": "Feiern bis in die Nacht"},
 ]}
 ---
