feat: add faq content

--- a/src/data/pages/faq.mdx
+++ b/src/data/pages/faq.mdx
@@ -8,6 +8,16 @@ status: ""
 content: {"faqs" : [
     {"question" : "?", "answer" : "!"},
     {"question" : "??", "answer" : "!!"},
-    {"question" : "???", "answer" : "!!!"}
+    {"question" : "???", "answer" : "!!!"},
+    {"question" : Gibt es einen Dresscode? "answer" : "Jein. Wir heiraten, komm also gerne mit Hemd oder Bluse/Kleid. Die Feier ist eine Outdoor-Grill-Veranstaltung im Sommer, dementsprechend kannst du aber gerne auf Anzug und lange Hose verzichten. Je nachdem was das Wetter her gibt."}
+    {"question" : Habt ihr Geschenkwünsche? "answer" : "Um es uns und euch einfach zu machen und da wir vor kurzem zusammengezogen sind, freuen wir uns am meisten über Geldgeschenke. Um das ganze zu personalisieren, fänden wir es schön, wenn du ein Bild von einer schönen gemeinsamen Erinnerung mitbringst! Diese werden wir dann am Abend zusammentragen und aufhängen. Eure Kreativität möchten wir aber natürlich nicht einschränken, falls ihr schon ein Geschenk im Kopf habt! Die Geschenke dürfen dann gerne um 16 Uhr an der Opfinger Hütte abgegeben werden."},
+    {"question" : "Wo muss ich wann sein?", "answer" : "Keine Sorge, auch mit wenig Orientierungssinn, wirst du uns finden -> LINK"},
+    {"question" : "Was gibt es zu Essen/Trinken? Was kann ich mitbringen?", "answer" : "Es wird gegrillt (vegetarisch). Für Grillgut und eine Auswahl an Getränken (alkoholisch sowie nicht-alkoholisch) ist gesorgt. Wir freuen uns, wenn du dir vorstellen könntest entweder einen Salat oder eine Nachspeise mit zu bringen. Trage dich hierfür gerne in unsere Liste ein -> https://werbringtwas.com/poll/a0a2611."},
+    {"question" : "Sind kreative Beiträge erwünscht?", "answer" : "Wir erwarten nicht unbedingt Beiträge zur Abendgestaltung. Hast du jedoch eine gute Idee die du umsetzen möchtest, richte dich gerne an Anja (E-Mail und Telefonnummer in den Kontakten). Sie ist für die Planung des Programms zuständig. "},
+    {"question" : "Wo kann ich übernachten?", "answer" : "Du kannst kostenfrei auf dem Gelände zelten. Zelt, Isomate und Schlafsack müssen jedoch selbst mitgebracht werden. Falls das nichts für dich ist, gibt es auch einige Hotels in der Nähe. B&B Freiburg Süd (https://www.hotel-bb.com/de/hotel/freiburg-sued?utm_source=gmb&utm_medium=referral&utm_content=freiburg&utm_campaign=yext) / Gasthaus Blume (Link) / Ibis Budged Freiburg Süd (Link)"},
+    {"question" : "Kann man im See baden?", "answer" : "Ja! Bring gerne Badeklamotten mit. Wetterabhängig ist es auf jeden Fall möglich die ein oder andere Bahn im See zu schwimmen."},
+    {"question" : "Wie läuft der Termin am Standesamt ab?", "answer" : "Wir werden alle gemeinsam mit einem Glas Sekt anstossen. Anschließend geht das Brautpaar mit Eltern und Trauzeugen in das Standesamt. Aus Platz gründen sind hier leider nur wenige Personen erlaubt. Nach dem ca. 15-minütigen offiziellen Termin empfangen die restlichen Gäste das Brautpaar mit Seifenblasen🤩 "},
+    {"question" : "Wird auf der Feier getanzt?", "answer" : "Wir hoffen doch! Es wird für eine Musikanlage gesorgt sein und wir werden abends gute Musik auflegen!"},
+    {"question" : "Gibt es schon eine gemeinsame Aktion am Donnerstag?", "answer" : "Nein, die Feierlichkeiten beschränken sich auf Freitag bis Samstag. Samstag müssen wir die Hütte bereits gegen 11 Uhr verlassen haben."}
 ]}
 ---
