fix: syntax in faq content

--- a/src/data/pages/faq.mdx
+++ b/src/data/pages/faq.mdx
@@ -9,8 +9,8 @@ content: {"faqs" : [
     {"question" : "?", "answer" : "!"},
     {"question" : "??", "answer" : "!!"},
     {"question" : "???", "answer" : "!!!"},
-    {"question" : Gibt es einen Dresscode? "answer" : "Jein. Wir heiraten, komm also gerne mit Hemd oder Bluse/Kleid. Die Feier ist eine Outdoor-Grill-Veranstaltung im Sommer, dementsprechend kannst du aber gerne auf Anzug und lange Hose verzichten. Je nachdem was das Wetter her gibt."}
-    {"question" : Habt ihr Geschenkwünsche? "answer" : "Um es uns und euch einfach zu machen und da wir vor kurzem zusammengezogen sind, freuen wir uns am meisten über Geldgeschenke. Um das ganze zu personalisieren, fänden wir es schön, wenn du ein Bild von einer schönen gemeinsamen Erinnerung mitbringst! Diese werden wir dann am Abend zusammentragen und aufhängen. Eure Kreativität möchten wir aber natürlich nicht einschränken, falls ihr schon ein Geschenk im Kopf habt! Die Geschenke dürfen dann gerne um 16 Uhr an der Opfinger Hütte abgegeben werden."},
+    {"question" : "Gibt es einen Dresscode?", "answer" : "Jein. Wir heiraten, komm also gerne mit Hemd oder Bluse/Kleid. Die Feier ist eine Outdoor-Grill-Veranstaltung im Sommer, dementsprechend kannst du aber gerne auf Anzug und lange Hose verzichten. Je nachdem was das Wetter her gibt."}
+    {"question" : "Habt ihr Geschenkwünsche?", "answer" : "Um es uns und euch einfach zu machen und da wir vor kurzem zusammengezogen sind, freuen wir uns am meisten über Geldgeschenke. Um das ganze zu personalisieren, fänden wir es schön, wenn du ein Bild von einer schönen gemeinsamen Erinnerung mitbringst! Diese werden wir dann am Abend zusammentragen und aufhängen. Eure Kreativität möchten wir aber natürlich nicht einschränken, falls ihr schon ein Geschenk im Kopf habt! Die Geschenke dürfen dann gerne um 16 Uhr an der Opfinger Hütte abgegeben werden."},
     {"question" : "Wo muss ich wann sein?", "answer" : "Keine Sorge, auch mit wenig Orientierungssinn, wirst du uns finden -> LINK"},
     {"question" : "Was gibt es zu Essen/Trinken? Was kann ich mitbringen?", "answer" : "Es wird gegrillt (vegetarisch). Für Grillgut und eine Auswahl an Getränken (alkoholisch sowie nicht-alkoholisch) ist gesorgt. Wir freuen uns, wenn du dir vorstellen könntest entweder einen Salat oder eine Nachspeise mit zu bringen. Trage dich hierfür gerne in unsere Liste ein -> https://werbringtwas.com/poll/a0a2611."},
     {"question" : "Sind kreative Beiträge erwünscht?", "answer" : "Wir erwarten nicht unbedingt Beiträge zur Abendgestaltung. Hast du jedoch eine gute Idee die du umsetzen möchtest, richte dich gerne an Anja (E-Mail und Telefonnummer in den Kontakten). Sie ist für die Planung des Programms zuständig. "},
