--- a/src/data/pages/location.mdx
+++ b/src/data/pages/location.mdx
@@ -6,25 +6,10 @@ title: "Location"
 slug: "/location"
 image: "img/location_hero_img.jpg"
 status: ""
-content: {"locations":[
-    {
-        "title": "Location",
-        "pic": "",
-        "points":[
-            {"type": "location", "title": "Neues Rathaus",  "adress": "Rathausplatz 2, 79098 Freiburg im Breisgau",  "url": "https://goo.gl/maps/CiqLA7nWTKoDFgmy9"},
-            {"type": "location", "title": "Opfinger Hütte", "adress": "Freiburger Str., 79112 Freiburg im Breisgau", "url": "https://goo.gl/maps/k54wNdbWjpwsEHXu6"},
-            {"type": "parking",  "title": "Rotteckgarage",  "adress": "Rotteckring 12, 79098 Freiburg im Breisgau",  "url": "https://goo.gl/maps/MgK5CJC6AyX5DUCd9"},
-        ]
-    },
-    {
-        "title": "Freiburg erkunden",
-        "pic": "",
-        "points": [
-            {"type": "eating",       "title": "Eisdiele TEST", "adress": "Rathausplatz 2<br>79098 Freiburg im Breisgau",  "url": "https://goo.gl/maps/CiqLA7nWTKoDFgmy9"},
-            {"type": "eating",       "title": "test test",     "adress": "Freiburger Str.<br>79112 Freiburg im Breisgau", "url": "https://goo.gl/maps/k54wNdbWjpwsEHXu6"},
-            {"type": "another_type", "title": "Eisdiele TEST", "adress": "Rathausplatz 2<br>79098 Freiburg im Breisgau",  "url": "https://goo.gl/maps/CiqLA7nWTKoDFgmy9"},
-            {"type": "another_type", "title": "test test",     "adress": "Freiburger Str.<br>79112 Freiburg im Breisgau", "url": "https://goo.gl/maps/k54wNdbWjpwsEHXu6"},
-        ]
-    },
-]}
+locations: [
+    {"title": "Neues Rathaus",  "adress": "Rathausplatz 2, 79098 Freiburg im Breisgau",  "url": "https://goo.gl/maps/CiqLA7nWTKoDFgmy9", "img": "img/location_1.png"},
+    {"title": "Opfinger Hütte", "adress": "Freiburger Str., 79112 Freiburg im Breisgau", "url": "https://goo.gl/maps/k54wNdbWjpwsEHXu6", "img": "img/location_2.png"},
+    {"title": "Rotteckgarage",  "adress": "Rotteckring 12, 79098 Freiburg im Breisgau",  "url": "https://goo.gl/maps/MgK5CJC6AyX5DUCd9", "img": "img/location_3.png"},
+    {"title": "...",            "adress": "...",                                         "url": "https://goo.gl/maps/MgK5CJC6AyX5DUCd9", "img": "img/location_4.png"}
+]
 ---
