correct order and links of location points

--- a/src/data/pages/contact.mdx
+++ b/src/data/pages/contact.mdx
@@ -7,11 +7,11 @@ slug: "/contact"
 image: "img/contact_hero_img.jpg"
 status: ""
 content: {"contacts" : [
-    {"role" : "Hochzeitspaar", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
-    {"role" : "Hochzeitspaar", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
-    {"role" : "Trauzeugen Braut", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
-    {"role" : "Trauzeugen Braut", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
-    {"role" : "Trauzeugen Bräutigam", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
-    {"role" : "Trauzeugen Bräutigam", "name" : "Eike Wolf", "mail": "abcd@abcd.de", "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
+    {"role" : "Hochzeitspaar"       , "name" : "Eike Wolf"         , "mail": "eikewolf1@yahoo.de"   , "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
+    {"role" : "Hochzeitspaar"       , "name" : "Matthias Leopold"  , "mail": "mat.leo@web.de"       , "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
+    {"role" : "Trauzeugen Braut"    , "name" : "Anja Wolf"         , "mail": "abcd@abcd.de"         , "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
+    {"role" : "Trauzeugen Braut"    , "name" : "Louisa Reinger"    , "mail": "louisa.reinger@gmx.de", "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
+    {"role" : "Trauzeugen Bräutigam", "name" : "Lukas Schlegel"    , "mail": "abcd@abcd.de"         , "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
+    {"role" : "Trauzeugen Bräutigam", "name" : "Markus Lindenmayer", "mail": "abcd@abcd.de"         , "tel" : "000/000 000", "pic" : "img/faq_hero_img.jpg"},
 ]}
 ---
