--- a/src/data/pages/location.mdx
+++ b/src/data/pages/location.mdx
@@ -7,9 +7,9 @@ slug: "/location"
 image: "img/location_hero_img.jpg"
 status: ""
 locations: [
-    {"title": "Neues Rathaus",  "adress": "Rathausplatz 2, 79098 Freiburg im Breisgau",  "url": "https://goo.gl/maps/CiqLA7nWTKoDFgmy9", "img": "img/location_1.png"},
-    {"title": "Opfinger Hütte", "adress": "Freiburger Str., 79112 Freiburg im Breisgau", "url": "https://goo.gl/maps/k54wNdbWjpwsEHXu6", "img": "img/location_2.png"},
-    {"title": "Rotteckgarage",  "adress": "Rotteckring 12, 79098 Freiburg im Breisgau",  "url": "https://goo.gl/maps/MgK5CJC6AyX5DUCd9", "img": "img/location_3.png"},
-    {"title": "...",            "adress": "...",                                         "url": "https://goo.gl/maps/MgK5CJC6AyX5DUCd9", "img": "img/location_4.png"}
+    {"title": "Neues Rathaus"   , "adress": "Rathausplatz 2, 79098 Freiburg im Breisgau" , "img": "img/location_1.png", "url": "https://goo.gl/maps/CiqLA7nWTKoDFgmy9"},
+    {"title": "Frei in Freiburg", "adress": "79098 Freiburg im Breisgau"                 , "img": "img/location_2.png", "url": "https://www.tripadvisor.de/Tourism-g187281-Freiburg_im_Breisgau_Baden_Wurttemberg-Vacations.html"},
+    {"title": "Weg"             , "adress": ""                                           , "img": "img/location_4.png", "url": "https://www.google.com/maps/dir/Neues+Rathaus+-+Stadt+Freiburg+i.+Br.,+Rathausplatz,+Freiburg+im+Breisgau/Opfinger+H%C3%BCtte,+Freiburger+Str.,+79112+Freiburg+im+Breisgau/@47.9965385,7.766231,13z/data=!3m1!4b1!4m13!4m12!1m5!1m1!1s0x47911c9ea0c67705:0xb90ad605b4fa6b8c!2m2!1d7.8492165!2d47.9961115!1m5!1m1!1s0x47911a9f7bb95935:0xa1a810249090a13!2m2!1d7.7506595!2d47.9982957"},
+    {"title": "Opfinger Hütte"  , "adress": "Freiburger Str., 79112 Freiburg im Breisgau", "img": "img/location_3.png", "url": "https://goo.gl/maps/k54wNdbWjpwsEHXu6"}
 ]
 ---
