change external links area

--- a/src/data/home_page/HomePage.mdx
+++ b/src/data/home_page/HomePage.mdx
@@ -6,21 +6,14 @@ slug: "/"
 newspaper_image: "img/newspaper.jpeg"
 
 ext_link_1_image: "img/ext_link-1-image-cake.jpg"
-ext_link_1_text: "Kulinarischer Beitrag"
+ext_link_1_text: "Kulinarische Beiträge"
 ext_link_1_link: "https://werbringtwas.com/poll/a0a2611"
 
-ext_link_2_image: "img/ext_link-2-image-games.jpg"
-ext_link_2_text: "Künstlerischer Beitrag & Spiele"
-ext_link_2_link: "https://www.reingersbackwelt.com/"
+ext_link_2_image: "img/ext_link-3-image-download.jpg"
+ext_link_2_text: "Bilder"
+ext_link_2_link: "https://onedrive.live.com/?authkey=%21APXhqHscpOxDx1M&id=887BEAD0B8F1708%21124666&cid=0887BEAD0B8F1708"
 
-ext_link_3_image: "img/ext_link-3-image-download.jpg"
-ext_link_3_text: "Bilder Download"
+ext_link_3_image: "img/ext_link-5_backwelt.png"
+ext_link_3_text: "Rezept-Inspirationen"
 ext_link_3_link: "https://www.reingersbackwelt.com/"
-
-ext_link_4_image: "img/ext_link-4-image-upload.jpg"
-ext_link_4_text: "Bilder Upload"
-ext_link_4_link: "https://onedrive.live.com/?authkey=%21APXhqHscpOxDx1M&id=887BEAD0B8F1708%21124666&cid=0887BEAD0B8F1708"
 ---
-
-
-[comment]: <> (TODO: Fill in correct links)
