add hotel links for faq page

--- a/src/data/pages/faq.mdx
+++ b/src/data/pages/faq.mdx
@@ -12,7 +12,7 @@ content: {"faqs" : [
     {"question" : "Wo muss ich wann sein?",                                  "answer" : "Keine Sorge, auch mit wenig Orientierungssinn, wirst du uns finden -> <a target='_blank' href='https://die-wopolds.de/location/'>Location</a>"},
     {"question" : "Was gibt es zu Essen/Trinken? Was kann ich mitbringen?",  "answer" : "Es wird gegrillt (vegetarisch). Für Grillgut und eine Auswahl an Getränken (alkoholisch sowie nicht-alkoholisch) ist gesorgt. Wir freuen uns, wenn du dir vorstellen könntest entweder einen Salat oder eine Nachspeise mit zu bringen. Trage dich hierfür gerne in unsere <a target='_blank' href='https://werbringtwas.com/poll/a0a2611'>Liste</a> ein."},
     {"question" : "Sind kreative Beiträge erwünscht?",                       "answer" : "Wir erwarten nicht unbedingt Beiträge zur Abendgestaltung. Hast du jedoch eine gute Idee die du umsetzen möchtest, richte dich gerne an Anja (E-Mail und Telefonnummer in den <a target='_blank' href='https://die-wopolds.de/contact/'>Kontakten</a>). Sie ist für die Planung des Programms zuständig."},
-    {"question" : "Wo kann ich übernachten?",                                "answer" : "Du kannst kostenfrei auf dem Gelände zelten. Zelt, Isomate und Schlafsack müssen jedoch selbst mitgebracht werden. Falls das nichts für dich ist, gibt es auch einige Hotels in der Nähe. Z.B: <a target='_blank' href='https://www.hotel-bb.com/de/hotel/freiburg-sued?utm_source=gmb&utm_medium=referral&utm_content=freiburg&utm_campaign=yext'>B&B Freiburg Süd</a> / <a target='_blank' href=''>Gasthaus Blume</a> / <a target='_blank' href=''>Ibis Budged Freiburg Süd</a>"},
+    {"question" : "Wo kann ich übernachten?",                                "answer" : "Du kannst kostenfrei auf dem Gelände zelten. Zelt, Isomate und Schlafsack müssen jedoch selbst mitgebracht werden. Falls das nichts für dich ist, gibt es auch einige Hotels in der Nähe. Z.B: <a target='_blank' href='https://www.hotel-bb.com/de/hotel/freiburg-sued?utm_source=gmb&utm_medium=referral&utm_content=freiburg&utm_campaign=yext'>B&B Freiburg Süd</a> / <a target='_blank' href='https://www.hotel-blume-freiburg.de/'>Gasthaus Blume</a> / <a target='_blank' href='https://www.booking.com/hotel/de/ibis-budget-freiburg-sud.de.html'>Ibis Budged Freiburg Süd</a>"},
     {"question" : "Kann man im See baden?",                                  "answer" : "Ja! Bring gerne Badeklamotten mit. Wetterabhängig ist es auf jeden Fall möglich die ein oder andere Bahn im See zu schwimmen."},
     {"question" : "Wie läuft der Termin am Standesamt ab?",                  "answer" : "Wir werden alle gemeinsam mit einem Glas Sekt anstossen. Anschließend geht das Brautpaar mit Eltern und Trauzeugen in das Standesamt. Aus Platz gründen sind hier leider nur wenige Personen erlaubt. Nach dem ca. 15-minütigen offiziellen Termin empfangen die restlichen Gäste das Brautpaar mit Seifenblasen 🤩"},
     {"question" : "Wird auf der Feier getanzt?",                             "answer" : "Wir hoffen doch! Es wird für eine Musikanlage gesorgt sein und wir werden abends gute Musik auflegen!"},
