fill in missing contact details

--- a/src/data/pages/contact.mdx
+++ b/src/data/pages/contact.mdx
@@ -7,11 +7,11 @@ slug: "/contact"
 image: "img/contact_hero_img.jpg"
 status: ""
 content: {"contacts" : [
-    {"role" : "Hochzeitspaar"       , "name" : "Eike Wolf"         , "mail": "eikewolf1@yahoo.de"   , "tel" : "", "pic" : "img/contact/Eike.jpeg"    , "picHover" : "img/contact/Eike_hover.jpeg"},
-    {"role" : "Hochzeitspaar"       , "name" : "Matthias Leopold"  , "mail": "mat.leo@web.de"       , "tel" : "", "pic" : "img/contact/Matthias.jpeg", "picHover" : "img/contact/Matthias_hover.jpeg"},
-    {"role" : "Trauzeugen Braut"    , "name" : "Anja Wolf"         , "mail": ""                     , "tel" : "", "pic" : "img/contact/Anja.jpeg"    , "picHover" : "img/contact/Anja_hover.jpeg"},
-    {"role" : "Trauzeugen Braut"    , "name" : "Louisa Reinger"    , "mail": "louisa.reinger@gmx.de", "tel" : "", "pic" : "img/contact/Louisa.png"   , "picHover" : "img/contact/Louisa_hover.png"},
-    {"role" : "Trauzeugen Bräutigam", "name" : "Lukas Schlegel"    , "mail": ""                     , "tel" : "", "pic" : "img/contact/Lukas.png"    , "picHover" : "img/contact/Lukas_hover.png"},
-    {"role" : "Trauzeugen Bräutigam", "name" : "Markus Lindenmayer", "mail": ""                     , "tel" : "", "pic" : "img/contact/Markus.jpeg"  , "picHover" : "img/contact/Markus_hover.jpeg"},
+    {"role" : "Hochzeitspaar"       , "name" : "Eike Wolf"         , "mail": "eikewolf1@yahoo.de"    , "tel" : "", "pic" : "img/contact/Eike.jpeg"    , "picHover" : "img/contact/Eike_hover.jpeg"},
+    {"role" : "Hochzeitspaar"       , "name" : "Matthias Leopold"  , "mail": "mat.leo@web.de"        , "tel" : "", "pic" : "img/contact/Matthias.jpeg", "picHover" : "img/contact/Matthias_hover.jpeg"},
+    {"role" : "Trauzeugen Braut"    , "name" : "Anja Wolf"         , "mail": "anjakarenwolf@yahoo.de", "tel" : "", "pic" : "img/contact/Anja.jpeg"    , "picHover" : "img/contact/Anja_hover.jpeg"},
+    {"role" : "Trauzeugen Braut"    , "name" : "Louisa Reinger"    , "mail": "louisa.reinger@gmx.de" , "tel" : "", "pic" : "img/contact/Louisa.jpeg"  , "picHover" : "img/contact/Louisa_hover.png"},
+    {"role" : "Trauzeugen Bräutigam", "name" : "Lukas Schlegel"    , "mail": "lukas-schlegel@web.de" , "tel" : "", "pic" : "img/contact/Lukas.jpeg"   , "picHover" : "img/contact/Lukas_hover.jpeg"},
+    {"role" : "Trauzeugen Bräutigam", "name" : "Markus Lindenmayer", "mail": ""                      , "tel" : "", "pic" : "img/contact/Markus.jpeg"  , "picHover" : "img/contact/Markus_hover.jpeg"},
 ]}
 ---
