Add new external link to accept/cancel invitation.

--- a/src/data/home_page/HomePage.mdx
+++ b/src/data/home_page/HomePage.mdx
@@ -5,6 +5,10 @@ slug: "/"
 
 newspaper_image: "img/newspaper.jpeg"
 
+ext_link_0_image: "img/ext_link-0-image-chairs_flowers.jpg"
+ext_link_0_text: "Zu-/Absagen"
+ext_link_0_link: "https://doodle.com/meeting/participate/id/dBP89oYa"
+
 ext_link_1_image: "img/ext_link-1-image-cake.jpg"
 ext_link_1_text: "Kulinarische Beiträge"
 ext_link_1_link: "https://werbringtwas.com/poll/a0a2611"
