--- a/src/data/img_attribution/img_attribution.mdx
+++ b/src/data/img_attribution/img_attribution.mdx
@@ -1,6 +1,7 @@
 ---
 slug: ""
 usedPics: {"externalPics": [
+                    {"name": "FreePic",   "usedOn": "External Links Area",   "url": "https://www.freepik.com/free-photo/bouquet-field-flowers-stands-little-chair_1621704.htm#query=Wedding%20guests&position=43&from_view=search&track=robertav1_2_sidr#position=43&query=Wedding%20guests"},
                     {"name": "FreePic",   "usedOn": "External Links Area",   "url": "https://de.freepik.com/fotos-kostenlos/die-besten-maenner-werfen-draussen-im-park-ein-laecheln-auf-den-lippen_7497998.htm#query=wedding%20games&position=2&from_view=search&track=ais"},
                     {"name": "Pixabay",   "usedOn": "External Links Area",   "url": "https://pixabay.com/de/photos/kuchen-torte-beeren-creme-4910417/"},
                     {"name": "FreePic",   "usedOn": "External Links Area",   "url": "https://de.freepik.com/fotos-kostenlos/schoene-menschen-die-eine-hochzeit-am-strand-feiern_16515516.htm#query=wedding%20games&position=31&from_view=search&track=ais"},
