--- a/src/data/pages/program.mdx
+++ b/src/data/pages/program.mdx
@@ -7,12 +7,12 @@ slug: "/program"
 image: "img/program_hero_img.jpg"
 status: ""
 content: {"timelineItems" : [
-    {"step": 1, "icon": "img/program_icon_sparkling_wine.jpg",  "text": "10:00 Uhr Sektempfang vor dem Rathaus"},
-    {"step": 2, "icon": "img/program_icon_rings.jpg",           "text": "11:00 Uhr Trauung (mit Eltern & Trauzeugen)"},
-    {"step": 3, "icon": "img/program_icon_bubblesAndBites.jpg", "text": "Seifenblasen und Häppchen"},
-    {"step": 4, "icon": "img/program_icon_pause.jpg",           "text": "Freizeit / Pause"},
-    {"step": 5, "icon": "img/program_icon_house.jpg",           "text": "16:00 Uhr Treffen an der Opfinger Hütte"},
-    {"step": 6, "icon": "img/program_icon_fire.jpg",            "text": "17:00 Uhr Grillieren & Essen"},
-    {"step": 7, "icon": "img/program_icon_night.jpg",           "text": "Feiern bis in die Nacht"},
+    {"step": 1, "icon": "img/program_icon_sparkling_wine.jpg",  "text": "15:30 Uhr Sektempfang"},
+    {"step": 2, "icon": "img/program_icon_rings.jpg",           "text": "16:30 Uhr Zeremonie"},
+    {"step": 3, "icon": "img/program_icon_pics.jpg",            "text": "17:00 Uhr Fotos"},
+    {"step": 4, "icon": "img/program_icon_fire.jpg",            "text": "17:30 Uhr Grillieren & essen"},
+    {"step": 5, "icon": "img/program_icon_game.jpg",            "text": "20:00 Uhr Hochzeitsspiel"},
+    {"step": 6, "icon": "img/program_icon_music.jpg",           "text": "20:30 Uhr Hochzeitstanz"},
+    {"step": 7, "icon": "img/program_icon_night.jpg",           "text": "Feiern und tanzen bis in die Nacht"},
 ]}
 ---
